# civiczone

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE-CODE  LICENSE-DOCS  MILESTONE_0_DONE.md  MILESTONE_1_DONE.md  MILESTONE_2_DONE.md  MILESTONE_3_DONE.md  MILESTONE_4_DONE.md  MILESTONE_5_DONE.md  MILESTONE_6_DONE.md  MILESTONE_7_DONE.md  MILESTONE_8_DONE.md  PRODUCTION_DEPTH_PARCEL_RULE_PERSISTENCE_DONE.md  PRODUCTION_DEPTH_QUESTION_LEDGER_DONE.md  README.md  README.txt  SECURITY.md  SUPPORT.md  USER-MANUAL.md  USER-MANUAL.txt  pyproject.toml
.agent-runs/2026-05-21-civiczone-v1-public-use/: active-control-state.md  implementation-report.md  manifest.yaml  scope-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: release.yml  verify.yml
civiczone/: __init__.py  integration_mocks.py  main.py  models.py  parcel_lookup.py  public_ui.py  qa.py  question_ledger.py  rule_lookup.py  staff_context.py  staff_ui.py  staff_workflows.py
civiczone/migrations/: __init__.py  alembic.ini  env.py  guards.py
civiczone/migrations/versions/: __init__.py  civiczone_0001_schema.py  civiczone_0002_parcel_rule_lookup_records.py  civiczone_0003_question_ledger.py  civiczone_0004_staff_workflows.py
docs/: IMPLEMENTATION_PLAN.md  MILESTONES.md  RECONCILIATION.md  browser-qa-civiczone-release-recovery-summary.md  browser-qa-civiczone-v0.1.1-alignment-summary.md  browser-qa-civiczone-v0.1.2-question-ledger-summary.md  browser-qa-production-depth-parcel-rule-persistence-summary.md  github-discussions-seed.md  index.html  release-integrity-correction-2026-05-21.md  release-recovery-status.md
docs/audits/: civiczone-audit-full-2026-05-07.md
docs/qa/: civiczone-v1-browser-qa.md  civiczone-v1-browser-recheck-console.json  civiczone-v1-careful-coding.md  civiczone-v1-keyboard-focus-layout.json  civiczone-v1-release-gate-audit.md  current-civiczone-release-qa.md
docs/qa/current-civiczone-release-qa/: summary.json
docs/qa/demotion-browser-qa-2026-05-10/: summary.md
scripts/: check-civiccore-placeholder-imports.py  verify-docs.sh  verify-release.sh
tests/: test_integration_adversarial_mocks.py  test_milestone_2_schema_and_migrations.py  test_milestone_3_parcel_lookup.py  test_milestone_4_use_dimensional_rules.py  test_milestone_5_citation_grounded_qa.py  test_milestone_6_planner_staff_context.py  test_milestone_7_public_ui_accessibility.py  test_production_depth_parcel_rule_persistence.py  test_production_depth_question_ledger.py  test_runtime_foundation.py  test_staff_workflow_api.py
