[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "civiczone"
version = "0.1.2"
description = "CivicZone runtime foundation for parcel-aware zoning and land-use Q&A."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "CivicSuite contributors" }
]
dependencies = [
  "civiccore==1.0.0",
  "fastapi>=0.115.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
  "build>=1.2.0,<2.0.0",
  "httpx>=0.27.0,<1.0.0",
  "psycopg2-binary>=2.9.0,<3.0.0",
  "pytest>=8.0.0,<9.0.0",
  "ruff>=0.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["civiczone"]
force-include = { "civiczone/migrations/alembic.ini" = "civiczone/migrations/alembic.ini" }

[tool.hatch.build.targets.sdist]
include = [
  "civiczone",
  "civiczone/migrations/alembic.ini",
  "scripts",
  "tests",
  "README.md",
  "README.txt",
  "CHANGELOG.md",
  "USER-MANUAL.md",
  "USER-MANUAL.txt",
  "CONTRIBUTING.md",
  "SECURITY.md",
  "SUPPORT.md",
  "CODE_OF_CONDUCT.md",
  "AGENTS.md",
  ".github",
  "docs",
  "MILESTONE_0_DONE.md",
  "MILESTONE_1_DONE.md",
  "MILESTONE_2_DONE.md",
  "MILESTONE_3_DONE.md",
  "MILESTONE_4_DONE.md",
  "MILESTONE_5_DONE.md",
  "MILESTONE_6_DONE.md",
  "MILESTONE_7_DONE.md",
  "MILESTONE_8_DONE.md",
  "PRODUCTION_DEPTH_PARCEL_RULE_PERSISTENCE_DONE.md",
  "PRODUCTION_DEPTH_QUESTION_LEDGER_DONE.md",
  "LICENSE-CODE",
  "LICENSE-DOCS",
]

[tool.ruff]
target-version = "py311"
line-length = 100
